# Mini-Video-Processor

./: .gitignore  CMakeLists.txt  Mini-Video-Processor.sln  Mini-Video-Processor.vcxproj  Mini-Video-Processor.vcxproj.filters  README.md  main.cpp  mvp.h  mvp_config.json  opencv_Debug.props  util.cpp  util.h  video_list.json  xgetopt.c
src/: func.cpp  header.h  main.cpp  mvp.cpp  mvp.h  util.cpp  util.h  xgetopt.c  xgetopt.h
x64/Debug/: Mini-Video-Processor.exe.recipe  Mini-Video-Processor.ilk  Mini-Video-Processor.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Mini-Vid.189c4a2f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mini-Video-Processor.lastbuildstate  Mini-Video-Processor.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
